{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "357fdebe-ff92-477c-9e93-c9851152d111",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "82a81b7a-adf9-4896-8a8e-e3e16c1367b6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Down_Shot",
                    "type": "Button",
                    "id": "abc21013-dd8e-4eda-aabb-f63d158edbc4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left_Shot",
                    "type": "Button",
                    "id": "84a6697a-02c7-4fd2-8e6f-552918b2dbd6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right_Shot",
                    "type": "Button",
                    "id": "db88f8d3-fcbd-47ad-8d76-c94f1790359b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Up_Shot",
                    "type": "Button",
                    "id": "72394227-90e7-4960-8038-27c327583b71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shot",
                    "type": "Button",
                    "id": "69274e50-d53e-4493-8eea-40830c7fbddb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slide",
                    "type": "Button",
                    "id": "d4241893-171a-452a-ad4c-8fa0184160f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Potion",
                    "type": "Button",
                    "id": "05371793-993e-4102-a8dc-eeec01f53049",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Recharge",
                    "type": "Button",
                    "id": "82e43dbc-ef83-421c-be0b-0bc7975e378e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "39a0af24-2ced-42a5-9f69-11a0feb39a11",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "48286e6b-e646-47b0-b6b9-9d0df8e5329a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "211a1d31-dc6b-454d-8a49-40a3ef217625",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down_Shot_Log",
                    "id": "f5b85025-fd06-41b0-ae21-a63199313e59",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down_Shot",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "5025402d-ccc6-4808-afa3-7841ab162d1e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down_Shot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "e5f68ab4-11da-4a7a-96c5-6cefe50296aa",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down_Shot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "69e28d2c-a3da-4e01-a419-262e57258c2d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down_Shot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left_Shot_Log",
                    "id": "14e23771-d1f6-42b3-a6e9-28d892e3f011",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Shot",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "f3da6700-8d31-4456-828d-999f157909e2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Shot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "721d47f4-97a2-46c9-a6ac-18279fd7f8b4",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Shot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right_Shot_Log",
                    "id": "0f46271c-00ed-44c9-b5f5-c4f65456625f",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right_Shot",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "e5441f64-08fa-4888-aa79-1affec58ea95",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right_Shot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "65ca7534-03c1-4815-bfe9-079d20904084",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right_Shot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Up_Shot_Log",
                    "id": "9acfd939-17b5-4493-97c4-3c5f00fe0433",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up_Shot",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "81f01f26-f53e-4120-a0c1-ef55311693c6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up_Shot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "f1bc2613-ff7b-45e5-9f45-1e9ecc3332b5",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up_Shot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "05fe7522-98e3-4058-adb8-b0647f3af023",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efb63828-e6b7-4b38-8c94-647f38fa53d4",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Potion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2341bb43-84c6-4fed-9615-47eb04a94df2",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Recharge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1400a6c9-8f8a-4f2d-891a-ee9c66713dae",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}